Fix Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1021,7 +1021,7 @@ body {
 
   .trends_post {
     width: calc(50% - 2px);
-    height: 245px;
+    min-height: 245px;
     margin-bottom: 4px;
   }
 
@@ -1212,7 +1212,7 @@ body {
 
   .trends_post {
     width: 100%;
-    height: 230px;
+    min-height: 230px;
   }
 
   .trends_tags {
